tdf#166365: Crash in file picker, directory property (kf5/kf6)

See bt from assertion here: https://bugs.documentfoundation.org/show_bug.cgi?id=166365#c1

Let's do the same as Gtk3KDE5FolderPicker::getDirectory() in
vcl/unx/gtk3_kde5/gtk3_kde5_folderpicker.cxx

Change-Id: Iaea4e4b916c30cc14d3959725922c73e9d161625
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184691
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins
(cherry picked from commit e77624db7f223ca1e487cea462e04a73efbc9f2b)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184694
(cherry picked from commit 53940f818f720d948b3d857dc9c66bdcbc999872)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184705